correct spacing between sections on projects and range, complete project responsiveness

--- a/src/components/ChainSpot.css
+++ b/src/components/ChainSpot.css
@@ -110,3 +110,9 @@
   padding: 0;
 }
 
+@media screen and (max-width: 1000px){
+  .chainspot-container {
+    margin: 0;
+    margin-bottom: 40px;
+  }
+}
